<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Master Password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_edit">Site</string>
    <string name="caption_siteName">Site Name</string>
    <string name="caption_userName">Login (optional)</string>
    <string name="caption_passwordType">Password Type</string>
    <string name="caption_algorithmVersion">Algorithm Version</string>
    <string name="caption_siteCounter">Site Counter</string>
    <string name="caption_add">Add</string>
    <string name="caption_logout">Logout</string>
    <string name="caption_settings">Settings</string>
    <string name="caption_import">Import</string>
    <string name="caption_export">Export</string>
    <string name="caption_addcategory">Add Category</string>
    <string name="copiedToClipboardWithDuration">Copied password to clipboard for %d seconds.</string>
    <string name="copiedToClipboard">Copied password to clipboard.</string>
    <string name="errorEmpty">Cannot be empty</string>
    <string name="caption_save">Save</string>
    <string name="caption_edit">Edit</string>
    <string name="caption_cancel">Cancel</string>
    <string name="msg_generateKey">Generating Master Key…</string>
    <string name="hint_password">Master Password</string>
    <string name="hint_passwordConfirm">Confirm</string>
    <string name="hint_fullName">Your Name</string>
    <string name="hint_category">Category Title</string>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="title_restartApp">Restart App</string>
    <string name="msg_restartApp">To change language the app needs to restart. Restart now?</string>
    <string name="caption_sort_lastUsage">Sort by last usage</string>
    <string name="caption_sort_alphabetically">Sort alphabetically</string>
    <string name="caption_sort">Sort</string>
    <string name="caption_showhide">Show/Hide Password</string>
    <string name="caption_delete">Delete</string>
    <string name="caption_increment">Increase Counter</string>
    <string name="caption_category">Category</string>
    <string name="title_feedback">Send Feedback…</string>
    <string name="title_passwords">Passwords</string>
    <string name="hidePasswordsTitle">Hide Passwords</string>
    <string name="errorPasswordMatch">Passwords don\'t match</string>
    <string name="title_confirmPassword">Enter your password</string>
    <string name="title_addCategory">Add Category</string>
    <string name="title_verifyError">Verification Error</string>
    <string name="msg_verifyError">Verification failed due to an unknown error. Verification was disabled, please reenable in settings if desired.\nIf this error persists please contact me at info@devland.de\n\nThank you</string>
    <string name="error_generic">An error occurred.</string>
    <string name="msg_exportDone">Export succeeded.</string>
    <string name="msg_importDone">Import succeeded.</string>
    <string name="caption_json">JSON</string>
    <string name="caption_mpsites">MPSITES</string>
    <string name="hint_mpsites">proprietary format\n (compatible with iOS/Mac-app)</string>
    <string name="hint_json">simple, easy to read</string>
    <string name="caption_override">Override</string>
    <string name="caption_append">Add</string>
    <string name="caption_merge">Merge (experimental)</string>
    <string name="hint_override">delete all existing sites before import</string>
    <string name="hint_append">keep existing sites</string>
    <string name="hint_merge">update existing and add new sites</string>
    <string name="title_exportFormat">Export Format</string>
    <string name="title_importType">Import Type</string>
    <string name="caption_selectFile">Select a file</string>
    <string name="caption_selectFolder">Select Folder</string>
    <string name="category_all">All</string>
    <string name="error_incorrectPassword">Password incorrect</string>
    <string name="msg_sentToInputstick">Send to InputStick</string>
    <string name="msg_algorithmVersionNotPrecalculated">Re-login to use other algorithm version.</string>
    <string name="msg_noUrlFound">Could not find URL to add</string>
    <string name="msg_previewNotAvailable">No preview available</string>
    <string name="msg_optional">optional</string>
    <string name="showPasswordCanaryTitle">Show Verification Code</string>
    <string name="showPasswordCanarySummary">Shows a small Emoticon at login to let you verify your password</string>
    <string name="title_saveUsername">Save Username</string>
    <string name="title_builtinFileManager">Use built-in File Manager</string>
    <string name="summary_useLegacyFilemanager">Use this if you encounter problems with the Android Documents App.</string>
    <string name="caption_generated">generated</string>
    <string name="msg_typedSuccessfully">Typed password successfully.</string>
    <string name="msg_inputstickFailed">Connection to InputStick failed. See InputStickUtility for details.</string>
    <string name="title_inputstick">InputStick</string>
    <string name="msg_connecting">Connecting…</string>
    <string name="msg_inputstickUtilityDownload">This functionality requires to download the InputStickUtility. You can download it from the PlayStore or the official InputStick Homepage.</string>
    <string name="caption_playStore">Play Store</string>
    <string name="summary_lockCategories" >If enabled categrories can neither get deleted nor added.</string>
    <string name="title_lockCategories" >Lock Categories</string>
    <string name="caption_homepage">Homepage</string>
    <string name="caption_notes">Notes</string>
    <string name="fingerprint_device_unsupported">Your device does not support fingerprint unlock</string>
    <string name="fingerprint_permission">Please enable the fingerprint permission</string>
    <string name="fingerprint_unconfigured">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="fingerprint_noLock">Please enable lockscreen security in your device\'s Settings</string>
    <string name="fingeprint_secretKeyUnrecoverable">Could not get secret Key from Keystore. Please disable and re-enable fingerprint in setting.</string>
    <string name="fingeprint_secretKeyGenerationFailed">Could not create secret Key. Seems that your device is unsupported.</string>
    <string name="fingeprint_cipherUnrecoverable">Could not create cipher for encryption. Seems your device is unsupported.</string>
    <string name="fingerprint_hint">Enter required information and then scan your fingerprint.</string>
    <string name="fingerprint_scanNeeded">You need to provide your fingerprint before proceeding.</string>
    <string name="fingerprint_dialog_success">Fingerprint provided. Confirm after entering your password.</string>
    <string name="msg_fingerprint_changed">Fingerprints changed, re-enable fingerprint in settings.</string>
</resources>
