<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PasswordViewActivity">

    <item android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:visible="false"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:icon="@drawable/ic_action_sort"
        android:title="@string/caption_sort"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuSortLastUsed"
                android:title="@string/caption_sort_lastUsage" />
            <item
                android:id="@+id/menuSortAlphabetically"
                android:title="@string/caption_sort_alphabetically" />
        </menu>
    </item>
</menu>
