<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.devland.masterpassword.ui.EditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView_siteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/caption_siteName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_siteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_siteName"
            android:layout_marginTop="@dimen/edittext_marginCaption" />

        <TextView
            android:id="@+id/textView_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_siteName"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:text="@string/caption_userName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <AutoCompleteTextView
            android:id="@+id/editText_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_userName"
            android:layout_marginTop="@dimen/edittext_marginCaption" />

        <TextView
            android:id="@+id/textView_passwordType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_userName"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:text="@string/caption_passwordType"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinner_passwordType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_passwordType"
            android:entries="@array/passwordTypeValues"
            android:layout_marginTop="@dimen/edittext_marginCaption" />

        <TextView
            android:id="@+id/textView_siteCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_passwordType"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:text="@string/caption_siteCounter"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <NumberPicker
            android:id="@+id/numberPicker_siteCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_siteCounter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/edittext_marginCaption" />


    </RelativeLayout>
</ScrollView>
